--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
       </div>
     </div>
     <div class="header_bottom_list">
-      <ul class="header_bottom_list_item">
-        <li class="active-item">
+      <ul class="header_navigation">
+        <li class="active_item">
           <a href="#">О нас</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Каталог</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Юридические услуги</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Вебинары</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Курсы</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Статьи</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Партнерство</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">Новости</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="header_navigation_item header_navigation">
           <a href="#">СДО</a>
         </li>
       </ul>
@@ -80,17 +80,6 @@
       </ul>
     </div>
   </header>
-
-  <div class="site-navigationForms">
-    <div clas s="site-navigation">
-
-
-    </div>
-    <div class="mailForm">
-
-    </div>
-  </div>
-
   <main>
     <div class="aboutTitle">О нас</div>
     <div class="info">
