--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
           <input class="search-form_txt" type="text" placeholder="Поиск по сайту">
         </label>
       </div>
-      <div class="header_button">
-        <button class="header_button header_button_registration">
+      <div class="botton-header">
+        <a href="#" role="button" class="header_botton_register botton_bacground">
           <img src="img/header/Person.svg">
-          <a>Регистрация и вход</a>
-        </button>
-        <button class=" header_button header_button_phone header_button_registration">
-          <img src="img/header/Phone.svg">
-          <a>Заказать звонок</a>
-        </button>
+          <div>Регистрация и вход</div>
+        </a>
 
+        <a href="#" role="button" class=" header_botton_register botton_bacground">
+          <img src="img/header/Phone.svg">
+          <div>Заказать звонок</div>
+        </a>
       </div>
+    </div>
     </div>
     <div class="header_bottom_list">
       <ul class="header_navigation">
@@ -74,78 +75,63 @@
           <img src="img/header/Mail.svg" alt="иконка Mail"> <a class="Mail-txt" href="#">info@grandschool.net</a>
         </li>
         <li class="list_contact">
-          <img src="img/Phone2.svg" alt="иконка телефона"> <a class="Phone-txt" href="#">8 800
+          <img src="img/header/Phone2.svg" alt="иконка телефона"> <a class="Phone-txt" href="#">8 800
             333-15-43 </a>
         </li>
       </ul>
     </div>
   </header>
   <main>
-    <div class="aboutTitle">О нас</div>
-    <div class="info">
-      <div class="about">
-
-        <div class="aboutContetnt">
-          <p>Один из ведущих учебных центров России. Работаем с 2006 года,<br> за это время обучили больше 10 000
-            человек по 60 образовательным <br> программам.<br>
-            <br>Наши спикеры — профессиональная команда экспертов, специалистов <br> и практиков, общение с которыми
-            позволит вам не только получить<br> полезные знания, но и перенять многолетний опыт.<br>
-            <br>Официальный партнёр «Международного учебно-методического<br> центра финансового мониторинга»
-            (МУМЦФМ).<br>
-            <br> Мы предлагаем пути решения проблем с практической точки зрения,<br>не ограничиваясь теорией и сухим
-            законодательством.<br>
-            <br>Обучаясь в «Grand School» вы приобретаете реальный опыт,который<br> поможет преуспеть в работе и
-            бизнесе.
-          </p>
-        </div>
-      </div>
-      <div class="licenseForm">
-        <div class="license">
-          <img src="img/license.png" alt="Фотография  лицензии">
-          <a class="license-txt" href="#">Лицензия в полном размере →</a>
-        </div>
-
-        <div class="agreement">
-          <img src="img/2.png" alt="Фотография  соглашение">
-          <a class="agreement-txt" href="#">Соглашение с МУМЦФМ →</a>
+    <div class="main_title">
+      <h1>О нас</h1>
+      <div class="main_content main_flex">
+        <p>Один из ведущих учебных центров России. Работаем с 2006 года,<br> за это время обучили больше 10 000
+          человек по 60 образовательным <br> программам.<br>
+          <br>Наши спикеры — профессиональная команда экспертов, специалистов <br> и практиков, общение с которыми
+          позволит вам не только получить<br> полезные знания, но и перенять многолетний опыт.<br>
+          <br>Официальный партнёр «Международного учебно-методического<br> центра финансового мониторинга»
+          (МУМЦФМ).<br>
+          <br> Мы предлагаем пути решения проблем с практической точки зрения,<br>не ограничиваясь теорией и сухим
+          законодательством.<br>
+          <br>Обучаясь в «Grand School» вы приобретаете реальный опыт,который<br> поможет преуспеть в работе и
+          бизнесе.
+        <div class="photo_document main_flex">
+          <div class="photo_document_1 ">
+            <img src="img/main/license.png" alt="Фотография  лицензии" ">
+            <a href=" #">Лицензия в полном размере →</a>
+          </div>
+          <div class="photo_document_1 ">
+            <img src="img/main/agreement.png" alt="Фотография  соглашение">
+            <a href="#">Соглашение с МУМЦФМ →</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="areaOfActivity">
+    <div class="title_activiti">
       <h1>Направление деятельности</h1>
-
-      <div class="areaActivity">
-        <li class="areaActivityItem">
-          <a href="#">Дистанционное обучение</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+      <ul class="activiti_list">
+        <li class="list_item"> <a href="#">Дистанционное обучение</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-        <li class="areaActivityItem">
-          <a href="#">Атестация</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+        <li class="list_item"><a href="#">Атестация</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-        <li class="areaActivityItem">
-          <a href="#">Вебинары</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+        <li class="list_item"><a href="#">Вебинары</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-        <li class="areaActivityItem">
-          <a href="#">Юрредическое сопровждение</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+        <li class="list_item"><a href="#">Юрредическое сопровждение</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-        <li class="areaActivityItem">
-          <a href="#">Разработка документации</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+        <li class="list_item"><a href="#">Разработка документации</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-        <li class="areaActivityItem">
-          <a href="#">Лицензирование</a>
-          <a href="#"><button class="activeItem-bth" href="#">Подробнее</button></a>
+        <li class="list_item"><a href="#">Лицензирование</a>
+          <div class="button_list" href="" role="button">Подробнее</div>
         </li>
-      </div>
+      </ul>
     </div>
     <div class="cooperation">
       <h1>Сотрудничаем любым удобным способом</h1>
-
-
-
       <div class="briefingGlobal">
         <div class="helpMee">
           <div class="briefingContainer">
@@ -157,49 +143,47 @@
                   </button>
                 </div>
                 <input class="briefing-form_txt" type="text" placeholder="Количество участников">
-                <buttom class="briefing-bth" href="#">Далее</buttom>
+                <buttom class="briefing-bth botton_bacground" href="#">Далее</buttom>
               </div>
             </div>
 
-          </div> <a class="briefing-txt" href="#">Онлайн-заявка →</a>
+          </div> <a class="briefing_text" href="#">Онлайн-заявка →</a>
         </div>
         <div class="briefingForm">
 
-          <div class="briefingImgOne">
-            <img class="imgOne" src="img/briefingImg1.png" alt="Фотография человека с наушниками">
-            <a class="briefingImgOneTxt" href="#">Звонок нам →</a>
+          <div class="briefing_image">
+            <img  src="img//cooperation/briefingImg1.png" alt="Фотография человека с наушниками">
+            <a class="briefing_text" href="#">Звонок нам →</a>
           </div>
-          <div class="briefingImgTwo">
-            <img class="imgTwo" src="img/briefingImg2.png" alt="Фотография офиса">
-            <a class="briefingImgTwoTxt" href="#">Посещение офиса →</a>
+          <div class="briefing_image">
+            <img  src="img//cooperation/briefingImg2.png" alt="Фотография офиса">
+            <a class="briefing_text" href="#">Посещение офиса →</a>
           </div>
 
         </div>
       </div>
     </div>
-    <div class="resourcesForm">
-      <h1>Наши ресурсы</h1>
-      <div class="resources">
-
-        <li class="resourcesItem">
-
+    <div class="resurces">
+      <h1 >Наши ресурсы</h1>
+      <ul class="resurces_list">
+        <li class="resurces_item">
           <a href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M43 24C43 34.4934 34.4934 43 24 43C13.5066 43 5 34.4934 5 24C5 13.5066 13.5066 5 24 5C34.4934 5 43 13.5066 43 24ZM24.6808 19.0266C22.8328 19.7952 19.1393 21.3862 13.6004 23.7994C12.701 24.157 12.2298 24.5069 12.1869 24.8491C12.1144 25.4273 12.8386 25.655 13.8246 25.965C13.9587 26.0072 14.0977 26.0509 14.2402 26.0972C15.2103 26.4126 16.5152 26.7815 17.1936 26.7962C17.809 26.8094 18.4958 26.5557 19.2541 26.0351C24.4293 22.5417 27.1007 20.776 27.2684 20.7379C27.3867 20.711 27.5507 20.6773 27.6618 20.776C27.7729 20.8748 27.762 21.0618 27.7502 21.1119C27.6785 21.4177 24.8361 24.0603 23.3652 25.4278C22.9066 25.8541 22.5814 26.1565 22.5149 26.2255C22.3659 26.3802 22.2141 26.5266 22.0682 26.6672C21.167 27.536 20.4911 28.1876 22.1056 29.2515C22.8815 29.7628 23.5024 30.1856 24.1218 30.6074C24.7982 31.0681 25.4729 31.5275 26.3458 32.0997C26.5682 32.2455 26.7806 32.397 26.9875 32.5444C27.7747 33.1057 28.4819 33.6098 29.3557 33.5294C29.8634 33.4827 30.3878 33.0053 30.6542 31.5815C31.2836 28.2166 32.5208 20.9258 32.8068 17.9215C32.8318 17.6582 32.8003 17.3214 32.775 17.1735C32.7497 17.0256 32.6968 16.8149 32.5046 16.659C32.2769 16.4742 31.9255 16.4353 31.7683 16.4381C31.0537 16.4506 29.9573 16.8319 24.6808 19.0266Z"
                 fill="#5D647D" />
             </svg>Telegram</a>
-          <a href="#"><button class="resourcesBth">Открыть</button></a>
+            <div class="button_list" href="" role="button">Открыть</div>
         </li>
-        <li class="resourcesItem">
+        <li class="resurces_item">
 
           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M8.5306 8.5306C6 11.0612 6 15.1341 6 23.28V24.72C6 32.8659 6 36.9388 8.5306 39.4694C11.0612 42 15.1341 42 23.28 42H24.72C32.8659 42 36.9388 42 39.4694 39.4694C42 36.9388 42 32.8659 42 24.72V23.28C42 15.1341 42 11.0612 39.4694 8.5306C36.9388 6 32.8659 6 24.72 6H23.28C15.1341 6 11.0612 6 8.5306 8.5306ZM12.0751 16.9501C12.27 26.3101 16.95 31.935 25.155 31.935H25.6201V26.58C28.6351 26.88 30.915 29.0851 31.8299 31.935H36.0901C34.9201 27.6751 31.8449 25.32 29.9249 24.42C31.8449 23.3101 34.5449 20.6101 35.1899 16.9501H31.3198C30.4798 19.9201 27.9901 22.62 25.6201 22.875V16.9501H21.75V27.33C19.35 26.7301 16.32 23.8201 16.185 16.9501H12.0751Z"
                 fill="#5D647D" />
             </svg>ВКонтакте</a>
-          <a href="#"><button class="resourcesBth">Открыть</button></a>
+            <div class="button_list" href="" role="button">Открыть</div>
         </li>
-        <li class="resourcesItem">
+        <li class="resurces_item">
 
           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="37" height="44" viewBox="0 0 37 44" fill="none">
               <path d="M8.62831 16.083L0.0383482 21.1881L0 11.093L8.62831 16.083Z" fill="#5D647D" />
@@ -219,28 +203,29 @@
               <path d="M18.9823 33.241L27.6107 38.231V28.1357L18.9823 33.241Z" fill="#5D647D" />
               <path d="M0 10.5173L8.62831 15.5457V5.52734L0 10.5173Z" fill="#5D647D" />
             </svg>GrandClass.net</a>
-          <a href="#"><button class="resourcesBth">Открыть</button></a>
+            <div class="button_list" href="" role="button">Открыть</div>
         </li>
-        <li class="resourcesItem">
+        <li class="resurces_item">
 
           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M27.4714 27.4714C24.6429 30.39 24.45 34.0286 24.1929 42C31.6243 42 36.7543 41.9743 39.4029 39.4029C41.9743 36.7543 42 31.38 42 24.1929C34.0286 24.45 30.39 24.6429 27.4714 27.4714ZM23.8071 42C16.3757 42 11.2457 41.9743 8.59714 39.4029C6.02571 36.7543 6 31.38 6 24.1929C13.9714 24.45 17.61 24.6429 20.5286 27.4714C23.3571 30.39 23.55 34.0286 23.8071 42ZM20.5286 20.5286C17.61 23.3571 13.9714 23.55 6 23.8071C6 16.62 6.02571 11.2457 8.59714 8.59714C11.2457 6.02571 16.3886 6 23.8071 6C23.55 13.9714 23.3571 17.61 20.5286 20.5286ZM24.1929 6C24.4371 13.9714 24.6429 17.61 27.4714 20.5286C30.39 23.3571 34.0286 23.55 42 23.8071C42 16.62 41.9743 11.2457 39.4029 8.59714C36.7543 6.02571 31.6243 6 24.1929 6Z"
                 fill="#5D647D" />
             </svg>Дзен</a>
-          <a href="#"><button class="resourcesBth">Открыть</button></a>
+            <div class="button_list" href="" role="button">Открыть</div>
         </li>
-        <li class="resourcesItem">
+        <li class="resurces_item">
 
           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
               <path
                 d="M43.1761 14.3822C42.7148 12.6689 41.3639 11.318 39.6506 10.8567C36.5205 10 23.9999 10 23.9999 10C23.9999 10 11.4794 10 8.34924 10.8237C6.66885 11.285 5.285 12.6689 4.82372 14.3822C4 17.5123 4 24.0032 4 24.0032C4 24.0032 4 30.5271 4.82372 33.6243C5.285 35.3376 6.6359 36.6885 8.34924 37.1498C11.5123 38.0065 23.9999 38.0065 23.9999 38.0065C23.9999 38.0065 36.5205 38.0065 39.6506 37.1828C41.3639 36.7215 42.7148 35.3706 43.1761 33.6572C43.9998 30.5271 43.9998 24.0362 43.9998 24.0362C43.9998 24.0362 44.0328 17.5123 43.1761 14.3822ZM20.0131 29.9999V18.0066L30.4249 24.0032L20.0131 29.9999Z"
                 fill="#5D647D" />
             </svg>YouTube</a>
-          <a href="#"><button class="resourcesBth">Открыть</button></a>
+            <div class="button_list" href="" role="button">Открыть</div>
         </li>
-      </div>
-      <h1>Наша команда</h1>
+      </ul>
+    </div>
+      <h1 class="">Наша команда</h1>
       <div class="team">
         <div class="teamNumber1">
           <img src="img/Avatar1.png" alt="Фото Ирины" style="max-width: 160px;z-index: 1;padding-left: 32px;">
@@ -252,11 +237,11 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
                   href="#">i.kolesova@grandschool.net</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 478</b></a>
               </li>
             </div>
@@ -272,11 +257,11 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
                   href="#">v.sushchenko@grandschool.net</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 477</b></a>
               </li>
             </div>
@@ -293,11 +278,11 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
                   href="#">m.yunchis@grandschool.net</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 475</b></a>
               </li>
             </div>
@@ -314,11 +299,11 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
                   href="#">t.dolina@grandschool.net</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 479</b></a>
               </li>
             </div>
@@ -335,11 +320,11 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt"
                   href="#">o.mikhaltsova@grandschool.net</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 476</b></a>
               </li>
             </div>
@@ -356,10 +341,10 @@
             </div>
             <div class="teamFormMail">
               <li class="teamMail">
-                <img class="teamMailIcn" src="img/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt" href="#">...</a>
+                <img class="teamMailIcn" src="img/header/Mail.svg" alt="иконка Mail"> <a class="teamMail-txt" href="#">...</a>
               </li>
               <li class="teamPhone">
-                <img class="teamPhone-icon" src="img/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
+                <img class="teamPhone-icon" src="img/header/Phone2.svg" alt="иконка телефона"> <a class="teamPhone-txt"
                   href="#">8 800 333-15-43 <b>доб. 475</b></a>
               </li>
             </div>
